--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.9",
+    "gl-matrix": "^3.4.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
