--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.9",
+    "canvas": "^2.9.3",
     "gl-matrix": "^3.4.3",
     "next": "12.1.6",
     "react": "18.2.0",
