--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "satellite-vis",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "populate": "node util/populate-db.js"
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.9",
     "canvas": "^2.9.3",
+    "dotenv": "^16.0.1",
     "gl-matrix": "^3.4.3",
+    "mongoose": "^6.4.4",
     "next": "12.1.6",
+    "node-fetch": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tle.js": "^4.7.1"
