--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --silent"
+    "test": "jest"
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.9",
