--- a/wasm/sgp4-wrap/Cargo.toml
+++ b/wasm/sgp4-wrap/Cargo.toml
@@ -8,5 +8,6 @@ crate_type = ["cdylib"]
 
 [dependencies]
 sgp4 = "0.7"
+eventual = "0.1.7"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
