--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "eslint": "8.18.0",
+    "eslint": "^8.23.1",
     "eslint-config-next": "12.1.6",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.8",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "jest-fetch-mock": "^3.0.3"
