add jest env for linting tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,14 @@
         "standard"
     ],
     "overrides": [
+        {
+            "files": [
+                "__tests__/*"
+            ],
+            "env": {
+                "jest": true
+            }
+        }
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
