remove unused dependency

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "node-fetch": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "tle.js": "^4.7.1"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
