--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-fetch": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "satellite.js": "4.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
